--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -59,6 +59,10 @@ input, select, textarea {
   &::placeholder {
     color: #9b9b9b;
   }
+
+  &.error {
+    border: 1px solid #d0021b;
+  }
 }
 
 select.placeholder {
@@ -78,16 +82,21 @@ textarea {
 .btn {
   height: 46px;
   border-radius: 3px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
   font-size: 18px;
   padding: 10px 30px;
+  transition: box-shadow 0.2s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
+  }
 }
 
 .btn-primary {
   background-color: #00ce71;
   color: #ffffff;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .row {
