--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -83,14 +83,21 @@ textarea {
   height: 46px;
   border-radius: 3px;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
   text-align: center;
   font-size: 18px;
   padding: 10px 30px;
   transition: box-shadow 0.2s ease-in-out;
-  cursor: pointer;
-
+  
   &:hover {
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
+  }
+
+  &:disabled, &:disabled:hover {
+    background-color: #eee;
+    color: #000;
+    box-shadow: none;
+    cursor: default;
   }
 }
 
