--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -94,7 +94,7 @@ textarea {
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
   }
 
-  &:disabled, &:disabled:hover {
+  &.disabled, &.disabled:hover {
     background-color: #eee;
     color: #000;
     box-shadow: none;
