--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -82,6 +82,7 @@ textarea {
 
 .btn {
   height: 46px;
+  border: none;
   border-radius: 3px;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
   cursor: pointer;
@@ -89,7 +90,7 @@ textarea {
   font-size: 18px;
   padding: 10px 30px;
   transition: box-shadow 0.2s ease-in-out;
-  
+
   &:hover {
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
   }
