move colours to _colours.scss

--- a/client/src/assets/scss/_colors.scss
+++ b/client/src/assets/scss/_colors.scss
@@ -1,2 +1,14 @@
-$coolest-red: #E73359;
-$coolest-white: #FFF;
+$coolest-red: #e73359;
+$coolest-error-red: #d0021b;
+$coolest-white: #fff;
+$coolest-light-grey: #eee;
+$coolest-grey: #e7e7e7;
+$coolest-dark-grey: #9b9b9b;
+$coolest-light-black: #4a4a4a;
+$coolest-black: #000;
+$coolest-warning-yellow: #f5a544;
+$coolest-green: #00ce71;
+$coolest-shadow: rgba(0, 0, 0, 0.2);
+$coolest-shadow-dark: rgba(0, 0, 0, 0.4);
+$coolest-border: rgba(34, 36, 38, 0.15);
+$coolest-background: #f3f3f3;
