add border to disabled button to make it stand out

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -101,6 +101,7 @@ textarea {
 
   &.disabled, &.disabled:hover {
     background-color: $coolest-grey;
+    border: solid 1px $coolest-border;
     box-shadow: none;
     color: $coolest-black;
     cursor: default;
