--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -81,7 +81,6 @@ textarea {
 }
 
 .btn {
-  height: 46px;
   border: none;
   border-radius: 3px;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
@@ -90,6 +89,7 @@ textarea {
   font-size: 18px;
   padding: 10px 30px;
   transition: box-shadow 0.2s ease-in-out;
+  text-decoration: none;
 
   &:hover {
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
@@ -106,6 +106,16 @@ textarea {
 .btn-primary {
   background-color: #00ce71;
   color: #ffffff;
+}
+
+.btn-primary-outline {
+  border: 1px solid #00ce71;
+  box-shadow: none;
+  color: #4f4f4f;
+
+  &:hover {
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+  }
 }
 
 .row {
