Allow admins to edit any project

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -174,3 +174,10 @@ textarea {
   color: #F5A544;
   font-size: 14px;
 }
+
+.error-message-warning {
+  background-color: #d0021b;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px;
+}
